# CodeNavigator

./: .gitignore  README.md  pyproject.toml  requirements.txt
evaluation/: cases.jsonl  run_eval.py
evaluation/reports/: baseline-2026-07-22.json
src/: __init__.py  config.py  models.py  server.py
src/models/: __init__.py  code_search.py  file_context.py
src/services/: __init__.py  file_reader.py
src/zoekt/: client.py
test/: test_config.py  test_evaluation.py  test_file_reader.py  test_search.py  test_server.py  test_zoekt_client.py  test_zoekt_integration.py  test_zoekt_query.py
