[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-search-mcp"
version = "0.1.0"
description = "MCP server for searching Zoekt-indexed source repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "mcp>=1.27.2",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
code-search-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
markers = [
    "integration: requires a real Zoekt server and RUN_ZOEKT_INTEGRATION=1",
]
